package com.bloom.cvservice.entity;

/**
 * Origine d'un CV : importé via fichier (PDF/DOCX) ou saisi manuellement section par section.
 */
public enum CvSource {
    UPLOAD,
    MANUAL
}
